# jde-peets-eu-monitor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: difficult-source-specialist.md  monthly-source-scout.md
config/: settings.yaml
docs/: index.html
docs-internal/: ARCHITECTURE.md  OPERATIONS.md
docs/assets/: app.js  style.css
docs/data/: brief.json  items.json  meta.json  sources.json
scripts/: make_demo_data.py  merge_registry.py  probe_run.py  rollback.py  run_monthly_scout.py  run_specialist.py  run_weekly.py  setup_scheduler.ps1  triage_sources.py
scripts/hooks/: post_edit.py
sources/: registry.yaml
src/analysis/: brief.py  engine.py  prompt.py  schemas.py
src/collectors/: collect.py  discovery.py  fetcher.py  html_page.py  pdf_doc.py  rss.py
src/common/: config.py  db.py  headless.py
src/processing/: dedup.py  normalize.py
src/publish/: export_json.py  publish.py
tests/: test_analysis.py  test_collectors.py  test_export.py  test_processing.py  test_store.py
tests/fixtures/: sample_article.html  sample_feed.xml  sample_listing.html
